Add simp only override

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -1,5 +1,12 @@
-{"version": "1.0.0",
+{"version": "1.1.0",
  "packagesDir": ".lake/packages",
- "packages": [],
+ "packages":
+ [{"type": "path",
+   "scope": "",
+   "name": "egg",
+   "manifestFile": "lake-manifest.json",
+   "inherited": false,
+   "dir": "./../../../..",
+   "configFile": "lakefile.lean"}],
  "name": "batteries",
  "lakeDir": ".lake"}
